@@ -1,3 +1,8 @@
+2014-05-19 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m
+	Parse alias fields in query.
+
 2014-05-16 Riccardo Mottola <rm@gnu.org>
 
 	* DBCSVWriter.m
